--- a/package.json
+++ b/package.json
@@ -14,7 +14,5 @@
   ],
   "author": "Luis Quispe",
   "license": "MIT",
-  "devDependencies": {
-    "firebase": "8.2.2"
-  }
+  "devDependencies": {}
 }
